--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -20,8 +20,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    
+
                     <li>@Html.ActionLink("Consulta Usuario", "Query", "User", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
             </div>
