--- a/Proyect_P3/Views/User/Query.cshtml
+++ b/Proyect_P3/Views/User/Query.cshtml
@@ -9,6 +9,15 @@
 <div class="row">
     <br />
     <div class="col-md-12">
+        <input type="button"
+               value="Nuevo"
+               class="btn btn-primary btn-lg" 
+                onclick="document.location.href='@Url.Content("~/User/Add")'" />
+
+        <input type="button"
+               value="Volver Atras"
+               class="btn btn-info btn-lg"
+               onclick="document.location.href='@Url.Content("~/")'" />
     </div>
     <br/>
     <br/>
