Update de Estilo, queda solo el edt

--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
 
                     <li>@Html.ActionLink("Consulta Usuario", "Query", "User", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Consulta de Documentos", "TipdocQuery", "Tipdoc", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
