Quite "Cargando Lista.."

--- a/Proyect_P3/Views/Tipdoc/Details.cshtml
+++ b/Proyect_P3/Views/Tipdoc/Details.cshtml
@@ -578,7 +578,7 @@
     }
 
     function goToList() {
-        showLoading(true, 'Cargando lista...');
+        showLoading(true);
         setTimeout(() => {
             document.location.href = '@Url.Content("~/Tipdoc/TipdocQuery")';
         }, 500);
