--- a/Proyect_P3/Views/Tipdoc/Add.cshtml
+++ b/Proyect_P3/Views/Tipdoc/Add.cshtml
@@ -398,8 +398,8 @@
                             {
                                 new SelectListItem { Text = "Factura (FAC)", Value = "FAC" },
                                 new SelectListItem { Text = "Recibo (REC)", Value = "REC" },
-                                new SelectListItem { Text = "Nota de Crédito (NC)", Value = "NC" },
-                                new SelectListItem { Text = "Orden de Compra (OC)", Value = "OC" }
+                                new SelectListItem { Text = "Nota de Crédito (NC)", Value = "N_C" },
+                                new SelectListItem { Text = "Orden de Compra (OC)", Value = "O_C" }
                             }, "Seleccione un tipo", new
                             {
                                 @class = "form-control-modern select-modern",
