--- a/Proyect_P3/Views/Shared/_Layout.cshtml
+++ b/Proyect_P3/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
 
                     <li>@Html.ActionLink("Consulta Usuario", "Query", "User", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Consulta de Documentos", "TipdocQuery", "Tipdoc", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Tipos de Vehículos", "Tipos", "Tipos", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Marcas de Vehículos", "Marcas", "Marcas", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cerrar Seccion", "Logoff", "CerrarSeccion", new { area = "" }, new { @class = "nav-link" })</li>
 
                 </ul>
